# Web4AI

./: .gitignore  README.md  pyproject.toml
Implementation/: Implementation_Roadmap.drawio  PDCA_System_Overview.md  Phase1_Setup_RAG_Bootstrap.md  Phase2_Sample_Generation.md  Phase3_Training_and_Deployment.md  Phase4_Production_and_Continuous_Learning.md  README.md  rag-system-architecture.md  trainai-knowledge-base.md  trainai-rag-integration-analysis.md
docs/: STEP1_COMPLETION_SUMMARY.md
scripts/: sqlite_graph.py  test_three_tier_rag.py
